// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkIconMarkerBackground should render properly 1`] = `
<svg
  className="bpk-icon-marker-background"
  height="40"
  viewBox="0 0 32 40"
  width="32"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M32,16.2575 L31.9995,16.3817 C32.0032,16.7936 31.9852,17.2038 31.9455,17.6093 C31.7127,20.4826 30.7446,23.1441 29.2328,25.3991 C26.2125,30.7416 21.1896,35.9609 17.2875,39.5 C16.5525,40.1667 15.4475,40.1667 14.7125,39.5 C10.8104,35.9609 5.78747,30.7416 2.76723,25.3991 C1.25541,23.1441 0.2873,20.4826 0.05453,17.6093 C0.01479,17.2038 -0.00317,16.7936 0.00046,16.3817 L0,16.2575 C0,7.2787 7.1634,0 16,0 C24.8366,0 32,7.2787 32,16.2575 Z"
  />
</svg>
`;

exports[`BpkIconMarkerBackground should render properly with "disabled" 1`] = `
<svg
  className="bpk-icon-marker-background bpk-icon-marker-background--disabled"
  height="40"
  viewBox="0 0 32 40"
  width="32"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M32,16.2575 L31.9995,16.3817 C32.0032,16.7936 31.9852,17.2038 31.9455,17.6093 C31.7127,20.4826 30.7446,23.1441 29.2328,25.3991 C26.2125,30.7416 21.1896,35.9609 17.2875,39.5 C16.5525,40.1667 15.4475,40.1667 14.7125,39.5 C10.8104,35.9609 5.78747,30.7416 2.76723,25.3991 C1.25541,23.1441 0.2873,20.4826 0.05453,17.6093 C0.01479,17.2038 -0.00317,16.7936 0.00046,16.3817 L0,16.2575 C0,7.2787 7.1634,0 16,0 C24.8366,0 32,7.2787 32,16.2575 Z"
  />
</svg>
`;

exports[`BpkIconMarkerBackground should render properly with "interactive" 1`] = `
<svg
  className="bpk-icon-marker-background bpk-icon-marker-background--interactive"
  height="40"
  viewBox="0 0 32 40"
  width="32"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M32,16.2575 L31.9995,16.3817 C32.0032,16.7936 31.9852,17.2038 31.9455,17.6093 C31.7127,20.4826 30.7446,23.1441 29.2328,25.3991 C26.2125,30.7416 21.1896,35.9609 17.2875,39.5 C16.5525,40.1667 15.4475,40.1667 14.7125,39.5 C10.8104,35.9609 5.78747,30.7416 2.76723,25.3991 C1.25541,23.1441 0.2873,20.4826 0.05453,17.6093 C0.01479,17.2038 -0.00317,16.7936 0.00046,16.3817 L0,16.2575 C0,7.2787 7.1634,0 16,0 C24.8366,0 32,7.2787 32,16.2575 Z"
  />
</svg>
`;

exports[`BpkIconMarkerBackground should render properly with "selected" 1`] = `
<svg
  className="bpk-icon-marker-background bpk-icon-marker-background--selected"
  height="48"
  viewBox="0 0 40 48"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M40,19.509 L39.9994003,19.6581 C40.0040003,20.1523 39.9815003,20.6445 39.9318003,21.1312 C39.6409003,24.5791 38.4307003,27.7729 36.5410003,30.479 C32.7657003,36.89 26.4870003,43.1531 21.6094003,47.4 C20.6906003,48.2 19.3094003,48.2 18.3906003,47.4 C13.5130003,43.1531 7.23430031,36.89 3.45904031,30.479 C1.56926031,27.773 0.359130306,24.5791 0.0681603056,21.1312 C0.0184903056,20.6445 -0.00395969437,20.1523 0.000570305633,19.6581 L0,19.509 C0,8.7345 8.95430031,0 20,0 C31.0457003,0 40,8.7345 40,19.509 Z"
  />
</svg>
`;
